log
Thu 20 Apr 2023 03:00:02 AM UTC: 
 tests:  1|8
total_score: 0/70
a7eae09
Thu 20 Apr 2023 03:20:52 AM UTC: 
 treemap.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:40:19: error: ‘Treemap’ undeclared (first use in this function); did you mean ‘TreeMap’?
   40 |   TreeMap *new = (Treemap *) malloc(sizeof(Treemap));
      |                   ^~~~~~~
      |                   TreeMap
treemap.c:40:19: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:40:28: error: expected expression before ‘)’ token
   40 |   TreeMap *new = (Treemap *) malloc(sizeof(Treemap));
      |                            ^
treemap.c:44:3: error: ‘map’ undeclared (first use in this function)
   44 |   map->root = NULL;
      |   ^~~
Compilation failed
b1a5d22
Thu 20 Apr 2023 03:21:09 AM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:40:19: error: ‘Treemap’ undeclared (first use in this function); did you mean ‘TreeMap’?
   40 |   TreeMap *new = (Treemap *) malloc(sizeof(Treemap));
      |                   ^~~~~~~
      |                   TreeMap
treemap.c:40:19: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:40:28: error: expected expression before ‘)’ token
   40 |   TreeMap *new = (Treemap *) malloc(sizeof(Treemap));
      |                            ^
Compilation failed
06ec62b
Thu 20 Apr 2023 03:21:55 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:40:43: error: ‘Treemap’ undeclared (first use in this function); did you mean ‘TreeMap’?
   40 |   TreeMap *new = (TreeMap*) malloc(sizeof(Treemap));
      |                                           ^~~~~~~
      |                                           TreeMap
treemap.c:40:43: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
f95717f
Thu 20 Apr 2023 03:22:05 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|8
total_score: 0/70
b7e3efa
Thu 20 Apr 2023 03:22:21 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
1630ee3
Thu 20 Apr 2023 03:58:03 AM UTC: 
 treemap.c | 11 ++++++++---
 1 file changed, 8 insertions(+), 3 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:76:5: error: ‘map’ undeclared (first use in this function)
   76 |     map->current = nodo;
      |     ^~~
treemap.c:76:5: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:77:12: error: returning ‘TreeNode *’ from a function with incompatible return type ‘Pair *’ [-Werror=incompatible-pointer-types]
   77 |     return nodo;
      |            ^~~~
treemap.c:82:10: error: returning ‘TreeNode *’ from a function with incompatible return type ‘Pair *’ [-Werror=incompatible-pointer-types]
   82 |   return nodo;
      |          ^~~~
cc1: all warnings being treated as errors
Compilation failed
4cfc77a
